@@ -1,1 +1,2 @@
 milestones_*.zip
+.vscode
