@@ -1,3 +1,4 @@
+local table = require("__flib__.table")
 require("scripts.global_init")
 
 return {
@@ -46,6 +47,23 @@ return {
                 force.print("[img=milestones_main_icon_white] If you see this message, you were affected by a Milestones bug which lost the completion time of your [font=default-large-bold]technology[/font] milestones.")
                 force.print("The issue is now fixed but you will need to re-enter your lost times in the Milestones window.")
                 refresh_gui_for_force(force)
+            end
+        end
+    end,
+
+    ["1.0.10"] = function()
+        log("Running 1.0.10 migration")
+        -- Editing settings would cause global.loaded_milestones to share objects with global.forces[].*
+        -- This could cause global.loaded_milestones to gain completion_tick fields, later messing with initialize_force code
+        global.loaded_milestones = table.deep_copy(global.loaded_milestones)
+        for _, milestone in pairs(global.loaded_milestones) do
+            milestone.completion_tick = nil
+            milestone.lower_bound_tick = nil
+        end
+        for _, global_force in pairs(global.forces) do
+            for _, milestone in pairs(global_force.incomplete_milestones) do
+                milestone.completion_tick = nil
+                milestone.lower_bound_tick = nil
             end
         end
     end,
